// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className="AppMenu-root-153"
  >
    <header
      className="MuiPaper-root-168 MuiPaper-elevation4-174 MuiAppBar-root-160 MuiAppBar-positionFixed-161 MuiAppBar-colorPrimary-166 mui-fixed"
    >
      <div
        className="MuiToolbar-root-195 MuiToolbar-regular-197 MuiToolbar-gutters-196 AppMenu-nowrap-155"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-205 MuiIconButton-root-199 MuiIconButton-colorInherit-200 AppMenu-menuButton-156"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-204"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-208"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </button>
        <h2
          className="MuiTypography-root-222 MuiTypography-title-228 MuiTypography-colorInherit-241 AppMenu-flex-154"
        >
          Point Pods
        </h2>
        <button
          className="MuiButtonBase-root-205 MuiIconButton-root-199 MuiIconButton-colorInherit-200"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-204"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-208"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </button>
        <div>
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-205 MuiIconButton-root-199 MuiIconButton-colorInherit-200"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-204"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-208"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-215"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="AppMenu-spacer-158"
    />
  </div>
  <button
    aria-label="New Player"
    className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-fab-276 MuiButton-contained-270 MuiButton-containedSecondary-272 MuiButton-raised-273 MuiButton-raisedSecondary-275 APIComponent-actionButton-148"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-262"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-208"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-215"
    />
  </button>
  <div
    className="PlayerCards-root-285"
  >
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            No Players Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className="AppMenu-root-153"
  >
    <header
      className="MuiPaper-root-168 MuiPaper-elevation4-174 MuiAppBar-root-160 MuiAppBar-positionFixed-161 MuiAppBar-colorPrimary-166 mui-fixed"
    >
      <div
        className="MuiToolbar-root-195 MuiToolbar-regular-197 MuiToolbar-gutters-196 AppMenu-nowrap-155"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-205 MuiIconButton-root-199 MuiIconButton-colorInherit-200 AppMenu-menuButton-156"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-204"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-208"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </button>
        <h2
          className="MuiTypography-root-222 MuiTypography-title-228 MuiTypography-colorInherit-241 AppMenu-flex-154"
        >
          Point Pods
        </h2>
        <button
          className="MuiButtonBase-root-205 MuiIconButton-root-199 MuiIconButton-colorInherit-200"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-204"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-208"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </button>
        <div>
          <button
            aria-haspopup="true"
            aria-owns={null}
            className="MuiButtonBase-root-205 MuiIconButton-root-199 MuiIconButton-colorInherit-200"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-204"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-208"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-215"
            />
          </button>
        </div>
      </div>
    </header>
    <div
      className="AppMenu-spacer-158"
    />
  </div>
  <button
    aria-label="New Player"
    className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-fab-276 MuiButton-contained-270 MuiButton-containedSecondary-272 MuiButton-raised-273 MuiButton-raisedSecondary-275 APIComponent-actionButton-148"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-262"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-208"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-215"
    />
  </button>
  <div
    className="PlayerCards-root-285"
  >
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          0 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock1"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test1
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          1 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock1"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test2
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          2 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock3"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test3
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          3 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock3"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock4"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test4
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          4 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock4"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock5"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test5
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          5 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock5"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock6"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test6
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          6 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock6"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock7"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test7
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          7 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock7"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock8"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test8
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          8 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock8"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-168 MuiPaper-elevation1-171 MuiPaper-rounded-169 MuiCard-root-288 PlayerCards-card-286"
      id="mock9"
    >
      <div
        className="MuiCardHeader-root-289"
      >
        <div
          className="MuiCardHeader-content-292"
        >
          <span
            className="MuiTypography-root-222 MuiTypography-headline-227 MuiCardHeader-title-293"
          >
            test9
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-295"
      >
        <p
          className="MuiTypography-root-222 MuiTypography-body1-231"
        >
          9 Cumulative Points
        </p>
      </div>
      <div
        className="MuiCardActions-root-296"
      >
        <a
          className="MuiButtonBase-root-205 MuiButton-root-261 MuiButton-text-263 MuiButton-flat-266 MuiButton-sizeSmall-282 PlayerCards-right-287 MuiCardActions-action-297"
          href="/player/mock9"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-262"
          >
            Details
          </span>
          <span
            className="MuiTouchRipple-root-215"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
